microprofile/src/main/fabric8/example-microprofile-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: example-microprofile
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    metadata:
      labels:
        app: example-microprofile
        deploymentconfig: example-microprofile
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: JAVA_OPTIONS
          value: -Dswarm.project.stage=production -Djava.net.preferIPv4Stack=true
        name: example-microprofile
        image: example-microprofile:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - example-microprofile
      from:
        kind: ImageStreamTag
        name: example-microprofile:latest
    type: ImageChange
